# vector-api

./: .gitignore  .gitmodules  README.md  application.py  pyproject.toml  requirements.txt
.ebextensions/: 01-options.config  21-matlab-setup.config
dockerfiles/: Dockerfile.lambda  app.py
dockerfiles/extras/: matlab-install.txt
dockerfiles/extras/vector_main/: PackagingLog.html
dockerfiles/extras/vector_main/for_redistribution_files_only/: GettingStarted.html  setup.py
dockerfiles/extras/vector_main/for_redistribution_files_only/vector_main/: vector_main.ctf
dockerfiles/extras/vector_main/for_testing/: readme.txt  requiredMCRProducts.txt
dockerfiles/extras/vector_main/for_testing/vector_main/: __init__.py
tests/: test_matlab_array.py  test_swt_matlab.py
vector_python/: CD_RB_ENGINEERING4.py  CD_cyl.py  CD_cyl_effective.py  CD_plate_effective.py  CD_sphere.py  CD_sphere2.py  CD_triFile_effective.py  DSMC_surface2.py  PLATEaeroCoeffs.py  geometry_wizard.py  langmuirKmodel_v3.py  make_surface.py  obliqueCylProjection.py  schamberg_plate2.py  sentman.py  surface_geometry2.py  test_main.py  vector_main.py
